src/test/ui/consts/qualif_overwrite_2.stderr
error[E0492]: cannot borrow a constant which may contain interior mutability, create a static instead
  --> $DIR/qualif_overwrite_2.rs:8:5
   |
LL |     &{a.0}
   |     ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0492`.
